--- a/android/app/src/main/res/menu/menu_map.xml
+++ b/android/app/src/main/res/menu/menu_map.xml
@@ -2,8 +2,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.team6.fsole.MapActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+    <item android:title="@string/scan"
+          android:id="@+id/scan"
+          android:enabled="true"
+          android:visible="true"/>
+    <item
+        android:title="@string/action_settings"
           android:orderInCategory="100"
           app:showAsAction="never"/>
 </menu>
