--- a/android/app/src/main/res/layout/bluetooth_list_item.xml
+++ b/android/app/src/main/res/layout/bluetooth_list_item.xml
@@ -3,4 +3,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <TextView
+        android:text="Name"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/_txtName"
+        android:layout_width="match_parent"
+        android:padding="2dp"
+        android:textSize="20sp" />
+
+    <TextView
+        android:text="Address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/_txtName"
+        android:layout_alignParentStart="true"
+        android:id="@+id/_txtAddress"
+        android:textSize="12sp" />
 </RelativeLayout>
