--- a/android/app/src/main/res/layout/activity_map.xml
+++ b/android/app/src/main/res/layout/activity_map.xml
@@ -481,7 +481,7 @@
                 android:layout_width="0dp"
                 android:layout_weight=".25">
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -489,7 +489,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -497,7 +497,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -505,7 +505,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/_colorView2L"
@@ -513,9 +513,9 @@
                     android:clickable="false"
                     android:layout_gravity="bottom|center"
                     android:layout_weight="1"
-                    android:visibility="invisible"/>
+                    android:visibility="invisible" />
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -530,7 +530,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight=".25">
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -538,7 +538,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:layout_height="wrap_content"
                     android:id="@+id/_colorView1L"
                     android:text="0"
@@ -547,7 +547,7 @@
                     android:layout_weight="1"
                     android:visibility="invisible"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -555,7 +555,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -563,7 +563,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -578,7 +578,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight=".25">
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -586,7 +586,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -594,7 +594,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -602,7 +602,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -610,7 +610,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -625,7 +625,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight=".25">
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -633,7 +633,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -642,7 +642,7 @@
                     android:visibility="invisible"
                     android:layout_gravity="right|center"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -650,7 +650,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/_colorView3L"
@@ -660,7 +660,7 @@
                     android:visibility="invisible"
                     android:layout_gravity="left|center"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -682,7 +682,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight=".25">
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -690,7 +690,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/_colorView1R"
@@ -700,7 +700,7 @@
                     android:layout_weight="1"
                     android:visibility="invisible"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -708,7 +708,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -716,7 +716,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -731,7 +731,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight=".25">
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -739,7 +739,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -747,7 +747,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -755,7 +755,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/_colorView2R"
@@ -765,7 +765,7 @@
                     android:layout_gravity="right"
                     android:visibility="invisible"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -780,7 +780,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight=".25">
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -788,7 +788,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -796,7 +796,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -804,7 +804,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -812,7 +812,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -827,7 +827,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight=".25">
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -835,7 +835,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/_colorView3R"
@@ -845,7 +845,7 @@
                     android:layout_weight="1"
                     android:visibility="invisible"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -853,7 +853,7 @@
                     android:visibility="invisible"
                     android:layout_weight="1"/>
 
-                <TextView
+                <ImageButton
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/_colorView0R"
@@ -863,7 +863,7 @@
                     android:layout_weight="1"
                     android:visibility="invisible"/>
 
-                <TextView
+                <ImageButton
                     android:text="0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
